@@ -1,3 +1,8 @@
+2005-02-07(jol):
+	- do not return pointer with egxp_opcode_get_id
+	- add functions to egxp_conditional_node with some helper function
+	- update the test example
+	
 2005-02-06(jol):
 	- fix a memleak from egxp_free
 	- add Egxp_ConditionalNode
